little fix so $ looks aligned in firefox

--- a/js/components/numberInput/numberInput.css
+++ b/js/components/numberInput/numberInput.css
@@ -17,3 +17,7 @@
 .number-input input::-ms-clear {
     display: none;
 }
+
+.number-input input[type=number] {
+    -moz-appearance:textfield;
+}
